added code generation + server to handle functions